[package]
name = "rpg"
version = "0.0.2"
authors = ["Julian Laubstein <contact@julianlaubstein.de>"]
description = "A very basic RPG engine written in Rust"
repository = "https://github.com/rust-rpg/rpg-rs"
readme = "README.md"
license-file = "LICENSE"

[dependencies]
rand = "0.3.14"
names = "0.11.0"
rustc-serialize = "0.3.21"
